# money-tracking

./: .env.example  .gitignore  Makefile  README.md  docker-compose.obs.yml  docker-compose.yml  index-dark.html  index-light.html
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_credit_card_fields.py  0003_drop_tags.py  0004_monthly_plan_and_bucket.py  0005_ui_unlock.py  0006_llm_provider.py  0007_encrypt_llm_api_key.py  0008_ui_passkey.py  0009_bucket_account.py
apps/api/scripts/: seed.py  seed_demo.py  seed_plan.py
apps/api/src/money_api/: config.py  db.py  main.py
apps/api/src/money_api/ingest/: gmail_llm.py  gmail_oauth.py  gmail_parser.py  gmail_poller.py
apps/api/src/money_api/llm/: audit.py  category_match.py  chat_service.py  extract.py  policy.py  provider.py  redact.py  tracing.py
apps/api/src/money_api/models/: __init__.py  account.py  bucket.py  budget.py  category.py  chat.py  llm.py  merchant.py  notify.py  oauth.py  plan.py  rule.py  settings.py  sync.py  transaction.py  transfer.py  ui_unlock.py
apps/api/src/money_api/routers/: accounts.py  admin.py  buckets.py  budgets.py  categories.py  chat.py  dashboard.py  gmail.py  health.py  llm_policies.py  (+8 more)
apps/api/tests/: conftest.py  test_accounts.py  test_categories.py  test_chat_and_transfer.py  test_dashboard.py  test_gmail_ingest.py  test_gmail_ingest_enrichment.py  test_gmail_llm.py  test_gmail_parser.py  test_llm_providers.py  test_plans.py  test_policy.py  test_transfers.py  test_ui_passkey.py  test_ui_unlock.py
(+111 files in other folders)
